frontend/test/should_pass/defYield_003e.grg
using defYield;

test t
{
	pp:p(--- yield x);
---
	def -x:E1->;
}

pattern p(--- def -x:EE->)
{
	-y:EE->;
---
	yield { yield x = y; }
}

