frontend/test/should_fail/computations_no_exec_method.grg
using computations_no_exec_method;

test t()
{
}
